--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     width: 40vw;
     background: url(img/5b68bede64bad2affa5c4b98f330f0ef.jpg ) no-repeat;
     background-size: 100%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: auto;
     position: relative;
 
